# static-serve

./: .containerignore  Cargo.toml  Containerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml  release.yml
src/: cli.rs  handler.rs  main.rs  settings.rs
