[package]
name = "static-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version ="4.3", features = ["derive"]}
axum = "0.6"
tokio = { version = "1.28", features = ["rt", "macros", "rt-multi-thread", "signal"] }
tower-http = {version = "0.4", features = ["fs", "compression-gzip", "cors"]}
tower = { version = "0.4", features = ["util"] }
anyhow = "1.0"
hyper = "0.14"
