[package]
name = "static-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread", "signal"] }
tower-http = {version = "0.5.2", features = ["fs", "compression-gzip", "cors"]}
tower = { version = "0.4.13", features = ["util"] }
anyhow = "1.0"
hyper = "1.2.0"
thiserror = "1.0.58"