[package]
name = "static-serve"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread", "signal"] }
tower-http = {version = "0.6.6", features = ["fs", "compression-gzip", "cors"]}
tower = { version = "0.5.2", features = ["util"] }
anyhow = "1.0"
hyper = "1.6"
thiserror = "2.0"
